# Delfos

./: README.md  bronze_layer_payload_tech.json  categories_tags.json  check_db.py  compose.yaml  consumer.py  data_ingestion.py  docker-compose.yaml  example-request-body.json  examples_event-type_responses.txt  execution_steps.txt  get_user_history.py  ingestion.py  main.py  markets.py  producer.py  requirement.txt  top_wallets_data.json  top_wallets_data_example.json  top_wallets_processor.py  user_wallets.json
Bronze_Layer/: Dockerfile  docker-compose.yml
Bronze_Layer/scripts/: bridge.py
Bronze_Layer2/: bridge.py  data_ingestion.py  docker-compose.yml  init.sql
Bronze_Layer2/scripts/: bridge.py
data_ingestion/: data_ingestion.py  docker-compose.yml  enrich_wallets_profiles.py  get_user_history.py  kafka_manager.py  markets.py  top_wallets_data.json  top_wallets_processor.py  wallet_analyzer.py  websocket_ingestor.py  websocket_kafka.py
init-db/: init.sql
notifications/: .env.example  Dockerfile  README.md  compose.yaml  config.py  discordbot.py  discordbotlocal.py  example-request-body.json  main.py  messaging.py  models.py  prueba_1.json  pyproject.toml  reporting.py  requirements.txt  sender.py  telegrambot.py  templates.py  todo.md
orchestration/: Dockerfile  docker-compose.yaml
orchestration/dags/: test_dag.py
orchestration/scripts/: test_script.py
proccesing/: Dockerfile  docker-compose.yaml
proccesing/anomalies/: price_anomalies.sql  price_changes.sql  volume_peaks.sql
spark/: spark-batch.py  spark-streaming.py
(+5 files in other folders)
